# scale-printer-mqtt

./: .gitignore  ACTIONS.md  Bakefile  CODEOWNERS  Containerfile  LICENSE  PRE_COMMIT_HOOK.md  README.md  TESTS.md  ai_prompt.md  build.hcl  compose.yaml  docker-compose.yml  generate_truth_table.py  pyproject.toml  test_table.py
.github/: dependabot.yml
.github/workflows/: build-test.yml  build.yml  codeql.yml  integration-test.yml  publish.yml  unit-test.yml
helm_chart/scale-printer-mqtt/: .helmignore  Chart.yaml  values.yaml
helm_chart/scale-printer-mqtt/templates/: NOTES.txt  _helpers.tpl  deployment-printer.yaml  deployment-scale.yaml
mosquitto/certs/: server.crt  server.csr  server.key
mosquitto/config/: mosquitto.conf  mosquitto_passwd
printer_daemon/: Containerfile  README.md  pyproject.toml
printer_daemon/src/printer_daemon/: main.py  mqtt_handler.py  serial_handler.py
printer_daemon/tests/: __init__.py  test_main.py  test_mqtt_handler.py  test_serial_handler.py
scale_daemon/: Containerfile  README.md  pyproject.toml
scale_daemon/src/scale_daemon/: main.py  mqtt_handler.py  serial_handler.py
scale_daemon/tests/: test_main.py  test_mqtt_handler.py  test_serial_handler.py
