[tool.poetry]
name = "scale-printer-mqtt"
version = "0.1.0"
description = "MQTT-based scale and printer daemon system"
authors = ["Cline <cline@example.com>"]
readme = "README.md"
packages = [
    {include = "scale_daemon", from = "scale_daemon/src"},
    {include = "printer_daemon", from = "printer_daemon/src"}
]

[tool.poetry.dependencies]
python = "^3.12"
paho-mqtt = "^2.0.0"
pyserial = "^3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
pytest-cov = "^6.1"
black = "^25.1"
flake8 = "^7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
max-line-length = 100

[tool.ruff]
max-line-length = 100

[tool.isort]
max_line_length = 100

[tool.flake8]
max-line-length = 100
