[tool.poetry]
name = "printer-daemon"
version = "0.1.0"
description = "Daemon to receive MQTT messages and print them to a serial printer."
authors = ["Bernardo Donadio <bernardo@donadio.solutions>"]
readme = "README.md"
packages = [{include = "printer_daemon", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
paho-mqtt = "^2.0.0"
pyserial = "^3.5"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
printer-daemon = "printer_daemon.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
pytest-cov = "^6.2"
black = "^25.1"
flake8 = "^7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
