[tool.poetry]
name = "scale-daemon"
version = "0.1.0"
description = "Daemon to read from a serial scale and publish to MQTT."
authors = ["Cline <cline@example.com>"]
readme = "README.md"
packages = [{include = "scale_daemon", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
paho-mqtt = "^2.0.0"
pyserial = "^3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
black = "^25.1"
flake8 = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
